--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/EditProject.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/EditProject.cshtml
@@ -266,6 +266,10 @@
                                     </h4>
                                     <div class="panel-heading-actions">
 
+                                        <a href="@Url.Action("EditClientPartInformationLegacy", "CTZ_Projects", new { id = Model.ID_Project, legacy = true })" class="btn btn-xs btn-primary" target="_blank">
+                                            <i class="fa-solid fa-pen-to-square"></i> Edit (Legacy)
+                                        </a>
+
                                         <button type="button" class="btn btn-xs btn-info edit-btn"
                                                 title="View Details"
                                                 onclick="location.href='@Url.Action("EditClientPartInformation", "CTZ_Projects", new { id = Model.ID_Project, details = true })'">
