2026-02-11 Se agregan secciones de volumenes.

--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/EditClientPartInformation.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/EditClientPartInformation.cshtml
@@ -54,7 +54,7 @@
                         <div id="client-part-information-root">
                             <div class="react-loader">
                                 <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw"></i>
-                                <p class="mt-2">Cargando aplicación...</p>
+                                <p class="mt-2">Loading...</p>
                             </div>
                         </div>
                     </div>
